--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Page title</title>
+    <title>JS example</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>Welcome to my page</h1>
+    <div class="quick">This is a quick js project</div>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
